crates/nash-parse/src/snapshots/nash_parse__import__tests__import_deeply_nested.snap
---
source: crates/nash-parse/src/import.rs
description: "Code:\n\nimport Platform.Cmd.Extra\n"
---
Import {
    import: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
        value: "Platform.Cmd.Extra",
    },
    alias: None,
    exposing: Explicit(
        [],
    ),
}
