crates/nash-parse/src/snapshots/nash_parse__import__tests__import_dotted.snap
---
source: crates/nash-parse/src/import.rs
description: "Code:\n\nimport Json.Decode\n"
---
Import {
    import: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 19,
            },
        },
        value: "Json.Decode",
    },
    alias: None,
    exposing: Explicit(
        [],
    ),
}
