crates/nash-parse/src/snapshots/nash_parse__import__tests__import_exposing_explicit.snap
---
source: crates/nash-parse/src/import.rs
description: "Code:\n\nimport Html exposing (div, span)\n"
---
Import {
    import: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        value: "Html",
    },
    alias: None,
    exposing: Explicit(
        [
            Lower(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 23,
                        },
                        end: Position {
                            line: 1,
                            column: 26,
                        },
                    },
                    value: "div",
                },
            ),
            Lower(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 28,
                        },
                        end: Position {
                            line: 1,
                            column: 32,
                        },
                    },
                    value: "span",
                },
            ),
        ],
    ),
}
