crates/nash-parse/src/snapshots/nash_parse__import__tests__import_exposing_open.snap
---
source: crates/nash-parse/src/import.rs
description: "Code:\n\nimport List exposing (..)\n"
---
Import {
    import: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        value: "List",
    },
    alias: None,
    exposing: Open,
}
