crates/nash-parse/src/snapshots/nash_parse__import__tests__import_exposing_types.snap
---
source: crates/nash-parse/src/import.rs
description: "Code:\n\nimport Maybe exposing (Maybe(..))\n"
---
Import {
    import: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 13,
            },
        },
        value: "Maybe",
    },
    alias: None,
    exposing: Explicit(
        [
            Upper {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 24,
                        },
                        end: Position {
                            line: 1,
                            column: 29,
                        },
                    },
                    value: "Maybe",
                },
                privacy: Public(
                    Region {
                        start: Position {
                            line: 1,
                            column: 30,
                        },
                        end: Position {
                            line: 1,
                            column: 32,
                        },
                    },
                ),
            },
        ],
    ),
}
