crates/nash-parse/src/snapshots/nash_parse__import__tests__import_full.snap
---
source: crates/nash-parse/src/import.rs
description: "Code:\n\nimport Platform.Cmd as Cmd exposing (Cmd)\n"
---
Import {
    import: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 20,
            },
        },
        value: "Platform.Cmd",
    },
    alias: Some(
        "Cmd",
    ),
    exposing: Explicit(
        [
            Upper {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 38,
                        },
                        end: Position {
                            line: 1,
                            column: 41,
                        },
                    },
                    value: "Cmd",
                },
                privacy: Private,
            },
        ],
    ),
}
